--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lottie-web": "^5.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
